--- a/layouts/partials/main/legend.html
+++ b/layouts/partials/main/legend.html
@@ -1,12 +1,7 @@
 <a href="#" class="show-legend js-show-dialog" data-target="#dialog-legend">Легенда</a>
 
-<div class="row">
-  <div class="column">
-    <article class="index-wrapper mb-2 mt-2">
-      <a href="#" class="button-dropdown button-outline js-show-toggle" data-target=".index-toggle-visibility">Оглавление</a>
-    </article>
-  </div>
-</div>
+<a href="#" class="show-index js-show-index">Оглавление</a>
+<div class="js-index-placeholder"></div>
 
 <div class="dialog js-dialog" id="dialog-legend">
   <a class="close-dialog js-close-dialog">&times;</a>
