--- a/layouts/partials/main/script.html
+++ b/layouts/partials/main/script.html
@@ -1,5 +1,8 @@
-{{ $mainJs := resources.Get "js/custom.js" | minify | fingerprint }}
-<script src="{{ $mainJs.Permalink }}" integrity="{{ $mainJs.Data.Integrity }}" defer></script>
+<script src="https://unpkg.com/@popperjs/core@2" defer></script>
+{{ $mainJs := resources.Get "js/custom.js" | resources.Minify }}
+{{ $js := slice $mainJs | resources.Concat "js/bundle.js" }}
+{{ $script := $js | resources.Fingerprint }}
+<script src="{{ $script.Permalink }}" integrity="{{ $script.Data.Integrity }}" defer></script>
 
 <script>
   (function(){
