--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -104,6 +104,23 @@
   .index-wrapper .index {
     flex-direction: column;
   }
+
+  a.show-legend, a.top-top-link, a.show-index {
+    font-size: 1.5rem;
+    padding: 2px 10px;
+  }
+
+  a.show-legend, a.show-index {
+    padding-left: 23px;
+  }
+
+  a.show-index {
+    bottom: 88px;
+  }
+
+  a.top-top-link {
+    padding-right: 23px;
+  }
 }
 
 @media (max-width: 40.1rem) {
