--- a/layouts/partials/footer/main.html
+++ b/layouts/partials/footer/main.html
@@ -1,18 +1,30 @@
 <footer>
   <div class="row">
-    <div class="column">
-      "Гарри и вагон косяков". 18+. Наш адрес: <a href="mailto:hi@harrypot.lol">hi@harrypot.lol</a>
+    <div class="column column-90">
+      "Гарри и вагон косяков". 18+. Наш адрес: <a href="mailto:hi@harrypot.lol">hi@harrypot.lol</a><br>
+      <small>
+        Команда: <a href="http://bodrovis.tech" target="_blank">@bodrovis</a> (автор всего этого безобразия),
+        <a href="https://vk.com/art_of_ameej" target="_blank">Amee-J</a> (дизайн, также см. <a href="https://www.deviantart.com/amee-j/gallery" target="_blank">крутую галерею</a>),
+        <a href="https://vk.com/id250950989" target="_blank">Айгуль</a> (дизайн)
+      </small>
     </div>
-    <div class="column to-top">
+    <div class="column column-10 to-top">
       <a class="top-top-link" href="#">В начало</a>
     </div>
   </div>
 
-  <div class="mt-05">
-    <small>
-      Контент носит исключительно развлекательный (юмористический) характер. Представленное мнение является субъективным и не преследует цели кого-либо оскорбить или обидеть.
-      Все права на оригинальный текст принадлежат изначальному правообладателю.
-      Цитирование текста книг минимально и производится только в целях комментирования, критики и обсуждения.
-    </small>
+  <div class="mt-05 row">
+    <div class="column">
+      <small>
+        Контент носит исключительно развлекательный (юмористический) характер. Представленное мнение является субъективным и не преследует цели кого-либо оскорбить или обидеть.
+        Все права на оригинальный текст принадлежат изначальному правообладателю.
+        Цитирование текста книг минимально и производится только в целях комментирования, критики и обсуждения.
+        <strong>
+          Любое употребление наркотических средств запрещено законодательством Российской Федерации и наносит вред Вашему здоровью.
+        </strong>
+        Не забывайте также, что любые наркотики (даже лёгкие), алкоголь, курение и мат &mdash;
+        это безусловное зло, которое наносит непоправимый вред вашему здоровью! Зло &mdash; тоже зло.
+      </small>
+    </div>
   </div>
 </footer>
