--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -24,19 +24,18 @@
     <link rel="manifest" href="/site.webmanifest">
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@bodrovis">
     <meta name="twitter:description" content="{{ block "tw_desc" . }}Все грехи, ошибки, нестыковки и косяки в книгах о Гарри Поттере.{{ end }}">
     <meta name="twitter:title" content="{{ block "tw_title" . }}{{ .Site.Title }}{{ end }}">
-    <meta name="twitter:image" content="{{ .Site.BaseURL}}banner_twitter.jpg">
+    <meta name="twitter:image" content="{{ .Site.BaseURL}}android-chrome-512x512.png">
 
-    <meta property="og:image" content="{{ .Site.BaseURL}}banner_twitter.jpg">
+    <meta property="og:image" content="{{ .Site.BaseURL}}android-chrome-512x512.png">
     <meta property="og:type" content="website">
     <meta property="og:title" content="{{ block "fb_title" . }}{{ .Site.Title }}{{ end }}">
     <meta property="og:description" content="{{ block "fb_desc" . }}Все грехи, ошибки, нестыковки и косяки в книгах о Гарри Поттере.{{ end }}">
     <meta property="og:url" content="{{.Permalink}}">
     <meta property="og:site_name" content="Гарри и вагон косяков">
-    <meta property="og:image:width" content="1646px">
-    <meta property="og:image:height" content="823px">
+    <meta property="og:image:width" content="512px">
+    <meta property="og:image:height" content="512px">
   </head>
   <body>
     <header>
