--- a/layouts/partials/footer/main.html
+++ b/layouts/partials/footer/main.html
@@ -2,11 +2,6 @@
   <div class="row">
     <div class="column column-90">
       "Гарри и вагон косяков". 18+. Наш адрес: <a href="mailto:hi@harrypot.lol">hi@harrypot.lol</a><br>
-      <small>
-        Команда: <a href="http://bodrovis.tech" target="_blank">@bodrovis</a> (автор всего этого безобразия),
-        <a href="https://vk.com/art_of_ameej" target="_blank">Amee-J</a> (дизайн, также см. <a href="https://www.deviantart.com/amee-j/gallery" target="_blank">крутую галерею</a>),
-        <a href="https://vk.com/id250950989" target="_blank">Айгуль</a> (дизайн)
-      </small>
     </div>
     <div class="column column-10 to-top">
       <a class="top-top-link" href="#">В начало</a>
@@ -22,8 +17,8 @@
         <strong>
           Любое употребление наркотических средств запрещено законодательством Российской Федерации и наносит вред Вашему здоровью.
         </strong>
-        Не забывайте также, что любые наркотики (даже лёгкие), алкоголь, курение и мат &mdash;
-        это безусловное зло, которое наносит непоправимый вред вашему здоровью! Зло &mdash; тоже зло.
+        Не забывайте также, что алкоголь, курение и мат &mdash;
+        это очень вредно и плохо.
       </small>
     </div>
   </div>
