--- a/layouts/partials/header/menu.html
+++ b/layouts/partials/header/menu.html
@@ -1,3 +1,10 @@
+<a href="/">
+  <picture>
+    <source media="(max-width:50rem)" srcset="/banner_mobile.jpg" style="width: 100%; height: auto;" alt="Гарри и вагон косяков">
+    <img src="/banner.jpg" alt="Гарри и вагон косяков" width="100%" height="auto">
+  </picture>
+</a>
+
 {{ $currentPage := . }}
 
 <nav class="main-menu js-menu">
