--- a/layouts/partials/footer/main.html
+++ b/layouts/partials/footer/main.html
@@ -15,7 +15,7 @@
         Все права на оригинальный текст принадлежат изначальному правообладателю.
         Цитирование текста книг минимально и производится только в целях комментирования, критики и обсуждения.
         <strong>
-          Любое употребление наркотических средств запрещено законодательством Российской Федерации и наносит вред Вашему здоровью.
+          Любое употребление наркотических средств запрещено законодательством Латвийской Республики (как и многих других стран &mdash; к примеру, Российской Федерации) и наносит вред Вашему здоровью.
         </strong>
         Не забывайте также, что алкоголь, курение и мат &mdash;
         это очень вредно и плохо.
