--- a/layouts/partials/header/menu.html
+++ b/layouts/partials/header/menu.html
@@ -8,7 +8,7 @@
 {{ $currentPage := . }}
 
 <nav class="main-menu js-menu">
-  <a href="#" class="menu-toggler js-menu-toggler" data-target=".parent-menu">
+  <a href="#" class="menu-toggler js-menu-toggler" data-target=".parent-menu" aria-label="Выберите книгу, о грехах которой вы хотите почитать">
     <span></span>
     <span></span>
     <span></span>
