--- a/layouts/partials/footer/main.html
+++ b/layouts/partials/footer/main.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="row">
     <div class="column column-90">
-      "Гарри и вагон косяков". 18+. Наш адрес: <a href="mailto:hi@harrypot.lol">hi@harrypot.lol</a><br>
+      "Гарри и вагон косяков". 18+.
     </div>
     <div class="column column-10 to-top">
       <a class="top-top-link" href="#">В начало</a>
